fix: Photo display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="Who">
-        <div class="Photo"><img src="/WORK/Rolling Scopes School/HTML, CSS & Git Basics/assets/22.png" alt="avatar"></div>
+        <div class="Photo"><img src="assets/22.png" alt="avatar"></div>
         <div class="Name">
             <h1 style="font-size: 50px;font-weight: 900;">Yauheny <br>Vial</h1>
             <p style="font-size: 40px;font-weight: 400;">Beginning Frontend Developer</p>
